kubernetes/apps/media/autoposter/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: autoposter
  namespace: media
  labels:
    route.scope: internal
  annotations:
    gatus.home-operations.com/enabled: "true"
    gatus.home-operations.com/guarded: "true"
    gatus.home-operations.com/endpoint: |
      group: Media
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/name: Autoposter
    gethomepage.dev/href: https://autoposter.vaderrp.com
    gethomepage.dev/pod-selector: app.kubernetes.io/name=autoposter
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-internal
      namespace: network
  hostnames:
    - autoposter.vaderrp.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: autoposter
          port: 8080
          weight: 1
